--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,15 @@
 .avatar {
-  vertical-align: middle;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
+    vertical-align: middle;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
 }
 
-.offset-item
-{
-  padding-left:5px;
-  padding-right:5px;
+.offset-item {
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
-.news-block
-{
-  margin-top:10px;
+.news-block {
+    margin-top: 10px;
 }
